--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -9,7 +9,7 @@
       >
         <!-- IF menu.LINK --><a href="{menu.LINK}"<!-- IF menu.BLANK --> target="_blank"<!-- ENDIF -->><!-- ENDIF -->
 
-          <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" /><!-- ENDIF -->
+          <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" height="14px" border="0" /><!-- ENDIF -->
           <!-- IF menu.SPAN -->
             <span class="{menu.SPAN}">
           <!-- ELSEIF menu.STYLE -->
