NEWS-misc-36a0.32: On planet overview added hint to news list how to rid of it

--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -20,6 +20,7 @@
         <table width=519>
           <tr><th colspan=2 class="c_c"><a href=announce.php>[ {L_news_title} ]</a></th></tr>
           <!-- INCLUDE news_list -->
+          <tr><th colspan=2 class="c_c">{L_news_hint}</th></tr>
         </table>
       <!-- ENDIF -->
 
