CHAT-feat-36a1.0: Remade as preMVC. All chat files integrated into one file

--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -10,7 +10,7 @@
 
   <tr><td class="c">
     <span class="fl"><b>{PAGE_HEADER}</b></span>
-    <span class="fr"><a onClick="window.open('chat_msg.php?ally={ALLY}&history=history', 'ChatHistory', '');">{L_chat_history}</a></span>
+    <span class="fr"><a onClick="window.open('index.php?page=chat_msg&history=history&ally={ALLY}', 'ChatHistory', '');">{L_chat_history}</a></span>
   </td></tr>
 
   <tr><th><div id="shoutbox" style="margin: 5px; vertical-align: text-top; height: 380px; overflow: auto;"></div></th></tr>
