CHAT-misc-36a1.2: Misc smiles change

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -508,3 +508,9 @@ th.c_j, td.c_j
   background-color: transparent;
   border: 0;
 }
+
+.chat_online
+{
+  background-color: black;
+  border: 0;
+}
