--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -31,7 +31,7 @@
             </select>
           </td>
           <td class="noborder" >
-            <input name="msg" type="text" id="msg" style="width:100%" maxlength="120" onKeyPress="if(event.keyCode == 13){document.chat_form.send.click();event.returnValue = false;return false;}" />
+            <input name="msg" type="text" id="msg" style="width:100%" maxlength="120" onKeyPress="if(event.keyCode == 13){document.chat_form.send.click();event.returnValue = false;return false;}" style="width: 100px" />
           </td>
           <td class="noborder" align="left" width="160px">
             &nbsp;&nbsp;<input type="button" name="send" value="{L_chat_send}" id="send" onClick="addMessage();event.returnValue = false;return false;" />
