ADM-misc-36d0.5: Ban now adds ban term for already banned players. On admin userlist for banned players on ban cell there is tooltip with banner name, ban date and reason

--- a/design/templates/OpenGame/admin/userlist.tpl.html
+++ b/design/templates/OpenGame/admin/userlist.tpl.html
@@ -33,7 +33,7 @@
     <td>
       <a href="admin/banned.php?name={user.NAME}">
       <!-- IF user.BANNED -->
-        <span class="warning">{user.BANNED}</span>
+        <span class="warning" title="{user.BAN_ISSUER} {L_adm_ban_msg_issued_date} {user.BAN_DATE}. {L_adm_bn_reas}: '{user.BAN_REASON}'">{user.BANNED}</span>
       <!-- ELSE -->
         {L_sys_no}
       <!-- ENDIF -->
