--- a/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
+++ b/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
@@ -110,7 +110,7 @@ function mrc_change(mercenary_id)
               <!-- ENDIF -->
 
               <!-- IF ! .officer.level --><br /><span class="error">{L_mrc_msg_error_no_resource}</span><!-- ENDIF -->
-              <!-- IF ! officer.CAN_BUY --><br /><a href="techtree.php"><span class="error">{L_mrc_msg_error_requirements}</span></a><!-- ENDIF -->
+              <!-- IF ! officer.CAN_BUY --><br /><a href="index.php?page=techtree"><span class="error">{L_mrc_msg_error_requirements}</span></a><!-- ENDIF -->
             <!-- ENDIF -->
           </form>
 
