SYS-37a1: All time-related code modified to support local client time

--- a/design/templates/OpenGame/admin/menu.tpl.html
+++ b/design/templates/OpenGame/admin/menu.tpl.html
@@ -60,5 +60,5 @@
 </div>
 
 <script type="text/javascript"><!--
-  sn_timers.unshift({'id': 'server_time', 'type': 2, 'active': true, 'start_time': {SERVER_TIME}, options: 3});
+  sn_timers.unshift({'id': 'server_time', 'type': 2, 'active': true, 'start_time': {TIME_NOW}, options: 3});
 // --></script>
