--- a/design/templates/OpenGame/fleet3.tpl.html
+++ b/design/templates/OpenGame/fleet3.tpl.html
@@ -1,5 +1,5 @@
 <br />
-<table border="0" cellpadding="0" cellspacing="1" width="519">
+<table border="0" cellpadding="0" cellspacing="1">
   <tr><td class="c success" colspan="2">{L_fl_fleet_send}</td></tr>
   <tr><td class="c_c">{L_fl_mission}</td><td class="c_c">{mission}</td></tr>
   <tr><td class="c_c">{L_fl_dist}</td><td class="c_c">{dist}</td></tr>
@@ -7,8 +7,20 @@
   <tr><td class="c_c">{L_fl_deute_need}</td><td class="c_c">{deute_need}</td></tr>
   <tr><td class="c_c">{L_fl_from}</td><td class="c_c">{from}</td></tr>
   <tr><td class="c_c">{L_fl_dest}</td><td class="c_c">{galaxy}:{system}:{planet}</td></tr>
-  <tr><td class="c_c">{L_fl_time_go}</td><td class="c_c">{time_go}</td></tr>
-  <tr><td class="c_c">{L_fl_time_back}</td><td class="c_c">{time_back}</td></tr>
+  <tr>
+    <td class="c_c" rowspan="2">{L_fl_time_go}</td>
+    <td class="c_c">{L_time_local}:&nbsp;{time_go_local}</td>
+  </tr>
+  <tr>
+    <td class="c_c">{L_time_server}:&nbsp;{time_go}</td>
+  </tr>
+  <tr>
+    <td class="c_c" rowspan="2">{L_fl_time_back}</td>
+    <td class="c_c">{L_time_local}:&nbsp;{time_back_local}</td>
+  </tr>
+  <tr>
+    <td class="c_c">{L_time_server}:&nbsp;{time_back}</td>
+  </tr>
 
   <tr><td class="c" colspan="2">{L_fl_title}</td></tr>
   <!-- BEGIN ships -->
