--- a/design/templates/OpenGame/flying_fleets.tpl.html
+++ b/design/templates/OpenGame/flying_fleets.tpl.html
@@ -12,7 +12,7 @@ var ships = Array();
   ships[{ships.ID}] = Array({ships.AMOUNT}, {ships.SPEED}, {ships.CONSUMPTION}, {ships.CAPACITY});
   <!-- ENDIF -->
 <!-- END ships -->
-var speed_factor   = {speed_factor};
+// var speed_factor   = {speed_factor};
 --></script>
 
 <!-- INCLUDE fleet_javascript -->
