--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -76,6 +76,12 @@
       </tr>
 
       <tr>
+        <td class="c_l" colspan="2">
+          <input name="opt_time_diff_clear" type="checkbox" id="opt_time_diff_clear" /> <label for="opt_time_diff_clear">{L_opt_time_diff_clear}</label>
+        </td>
+      </tr>
+
+      <tr>
         <td class="c" colspan="2">{L_general_settings}</td>
       </tr>
 
