--- a/design/templates/OpenGame/chat_body.tpl.html
+++ b/design/templates/OpenGame/chat_body.tpl.html
@@ -22,11 +22,11 @@
             <label for="msg">{L_chat_message}:</label>&nbsp;
             <select name="color" id="chat_color">
               <option value = "">white</option>
-              <option value="blue">blue</option>
+              <option value="cyan">blue</option>
               <option value="yellow">yellow</option>
               <option value="green">green</option>
               <option value="pink">pink</option>
-              <option value="red">red</option>
+              <option value="maroon">red</option>
               <option value="orange">orange</option>
             </select>
           </td>
