INT-fix-37a3.2: Misc interface fixes

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -15,7 +15,7 @@
   <table width="519px">
     <tbody>
       <!-- IF ADM_PROTECT_PLANETS -->
-        <tr><td class="c" colspan="2">{L_opt_adm_title}</td></tr>
+        <tr><th class="c_c" colspan="2">{L_opt_adm_title}</th></tr>
         <tr>
           <th><label for="adm_pl_prot">{L_opt_adm_planet_prot}</label></th>
           <th><input name="adm_pl_prot"{adm_pl_prot_data} type="checkbox" id="adm_pl_prot" /></th>
@@ -23,7 +23,7 @@
       <!-- ENDIF -->
 
       <tr>
-        <td class="c" colspan="2">{L_userdata}</td>
+        <th class="c_c" colspan="2">{L_userdata}</th>
       </tr>
       <tr>
         <th>{L_username}</th>
@@ -82,7 +82,7 @@
       </tr>
 
       <tr>
-        <td class="c" colspan="2">{L_general_settings}</td>
+        <th class="c_c" colspan="2">{L_general_settings}</th>
       </tr>
 
       <tr>
@@ -127,7 +127,7 @@
 
       <!-- IF .options_3 -->
         <tr>
-          <th class="c_l" colspan="2">{L_opt_int_options}</th>
+          <th class="c_c" colspan="2">{L_opt_int_options}</th>
         </tr>
 
         <!-- BEGIN options_3 -->
@@ -147,7 +147,7 @@
 
       <!-- IF .options_2 -->
         <tr>
-          <th class="c_l" colspan="2">{L_galaxyvision_options}</th>
+          <th class="c_c" colspan="2">{L_galaxyvision_options}</th>
         </tr>
 
         <!-- BEGIN options_2 -->
@@ -185,7 +185,7 @@
 
       <!-- IF .options_1 -->
         <tr>
-          <th class="c_l" colspan="2">{L_opt_messages}</th>
+          <th class="c_c" colspan="2">{L_opt_messages}</th>
         </tr>
 
         <!-- BEGIN options_1 -->
