--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -53,7 +53,7 @@
 
             <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
             <!-- INCLUDE eco_queue -->
-            <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;">
+            <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;" class="c_c">
               <a href="buildings.php?mode=research">
                 <img style="position: absolute; left: 0; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_128x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
                 <!-- IF $QUE_NOT_EMPTY -->
