SYS-misc-37a3.10: Added support for 'HOPe' unit

--- a/design/templates/OpenGame/novapedia.tpl.html
+++ b/design/templates/OpenGame/novapedia.tpl.html
@@ -40,7 +40,7 @@
 </table>
 
 <table width="519">
-  <!-- IF UNIT_IS_SHIP -->
+  <!-- IF UNIT_IS_SHIP && .engine -->
     <tr class="c_l">
       <th>{L_wiki_ship_header}</th>
       <th>{L_wiki_char_nominal}</th>
