QUE-feat-37a8.7: New que system. Research moved to new que/unit system

--- a/design/templates/OpenGame/buildings_research.tpl.html
+++ b/design/templates/OpenGame/buildings_research.tpl.html
@@ -26,9 +26,9 @@
     <tr>
       <td colspan="2" class="c" align="center">
         <div class="fl"><form method="post"><input type="submit" value="{L_eco_que_clear}"><input type="hidden" name="action" value="clear"></form></div>
-<!--
+        <!-- IF CONFIG_RESEARCH_QUE > 1 -->
         <div class="fr"><form method="post"><input type="submit" value="{L_eco_que_trim}"><input type="hidden" name="action" value="trim"></form></div>
--->
+        <!-- ENDIF -->
       </td>
     </tr>
   <!-- ELSE -->
@@ -46,7 +46,7 @@
       </a>
     </td>
     <td class="c_c">
-      <div><a href="infos.php?gid={production.ID}">{production.NAME}<!-- IF production.LEVEL -->&nbsp;{production.LEVEL}<!-- IF production.LEVEL_BONUS --><span class="bonus">+{production.LEVEL_BONUS}</span><!-- ENDIF --><!-- ENDIF --></a></div>
+      <div><a href="infos.php?gid={production.ID}">{production.NAME}<!-- IF production.LEVEL -->&nbsp;{production.LEVEL}<!-- IF production.LEVEL_BONUS --><span class="bonus">+{production.LEVEL_BONUS}</span><!-- ENDIF --><!-- ENDIF --><!-- IF production.LEVEL_QUED --><span class="positive">+{production.LEVEL_QUED}</span><!-- ENDIF --></a></div>
       <div style="text-align: justify;">{production.DESCRIPTION}</div>
       <table align="center">
         <tr>
