INT-misc-37a8.15: Misc changes to Empire overview

--- a/design/templates/OpenGame/simple_footer.tpl.html
+++ b/design/templates/OpenGame/simple_footer.tpl.html
@@ -1,6 +1,6 @@
 
     <div id="copyright" style="padding-top: 2ex;">
-      Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-2012 Go</span>rlum<br>
+      Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-20</span><span>13 Go</span>rlum<br>
       Ba<span>sed on X</span>Nova Ra<span>geRe<span>pac</span>k v2</span>26
     </div>
 
